# SP20_assignment2_ag_tests

./: CMakeLists.txt  test_deck.cpp  test_deck_print.cpp  test_hand.cpp  test_hand_print.cpp  test_player.cpp
